--- a/pages/timetable.css
+++ b/pages/timetable.css
@@ -1,4 +1,25 @@
 body {
-    background-color: black;
-    color:white;
+  background-color: black;
+  color: white;
+}
+
+.statistics table {
+  font-family: Arial, sans-serif;
+  border: 1px solid white;
+  box-shadow: white 0px 0px 20px;
+  border-radius: 8px; /* optional, to add rounded corners */
+}
+
+.statistics th,
+.statistics td {
+  padding: 12px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+.statistics tr {
+  text-align: left;
+}
+
+.statistics thead {
+  color: white;
 }
