Removed JS inside HTML by reference and use of alt text to meet CSP

--- a/pages/timetable.css
+++ b/pages/timetable.css
@@ -5,33 +5,70 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  background-attachment: fixed; /* This makes the background fixed */
-  min-height: 100vh; /* Ensure the body is at least as tall as the viewport */
+  background-attachment: fixed;
+  min-height: 100vh;
   margin: 0;
+  overflow-y: hidden;
 }
 
-.statistics table {
-  font-family: Arial, sans-serif;
-  border: 1px solid white;
-  box-shadow: white 0px 0px 20px;
-  border-radius: 8px; /* optional, to add rounded corners */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+.table-container {
+  max-height: 300px;
+  overflow-y: auto;
+  border: 1px solid #ddd;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  box-shadow: 0px 0px 15px 0px white;
+  -webkit-box-shadow: 0px 0px 15px 0px white;
+  -moz-box-shadow: 0px 0px 15px 0px white;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
   font-size: 18px;
-}
-
-.statistics th,
-.statistics td {
-  padding: 12px;
-  text-align: left;
-  border-bottom: 1px solid #ddd;
-}
-.statistics tr {
-  text-align: left;
   background-color: black;
 }
 
-.statistics thead {
+thead {
+  position: sticky;
+  top: 0;
+  background-color: #f9f9f9;
+  box-shadow: 0 2px 5px white;
+  z-index: 1;
+}
+
+td {
   color: white;
 }
+
+th {
+  color: black;
+}
+
+th,
+td {
+  padding: 10px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+
 .analysis {
   background-color: black;
   border-radius: 20px;
@@ -42,7 +79,10 @@ body {
   text-align: center;
   font-size: 20px;
   box-shadow: white 0px 0px 15px;
-  padding: 20px; /* Adjust this value to increase/decrease the inner space */
+  padding: 20px;
+  box-shadow: 0px 0px 15px 0px white;
+  -webkit-box-shadow: 0px 0px 15px 0px white;
+  -moz-box-shadow: 0px 0px 15px 0px white;
 }
 
 .analysis h1 {
