Fix links for download + updated; Add popup fancy background linear gradient

--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@
 
 body {
   width: 250px;
-  background-color: black;
   color: white;
+  background: linear-gradient(to bottom,darkred, black);
 }
 
 h1 {
